fix image alignment

--- a/styles.css
+++ b/styles.css
@@ -3,38 +3,45 @@
   src: url("fonts/DM_Serif_Display/DMSerifDisplay-Regular.ttf");
 }
 
+* {
+  --the-red: #f00;
+  --the-white: #fff;
+  --the-gray: #b8b8b8;
+  --the-black: #000;
+}
+
 .bigtext {
   font-family: DMSerifDisplay;
   font-size: 29px;
   font-weight: 900;
   font-stretch: ultra-expanded;
   color: red;
-  -webkit-text-stroke: 0.1px black;
+  -webkit-text-stroke: 0.1px var(--the-black);
   /* maybe set back to 
   text-shadow: 2px 1px #000;
   */
 }
 
 .bg-gray {
-  background-color: #b8b8b8;
+  background-color: var(--the-gray);
 }
 
 .navbar {
-  border-bottom: solid 4px #f00;
+  border-bottom: solid 4px var(--the-red);
 }
 
 /* TODO: style menu items. Maybe red? Definitely a different font/weight */
 
-.page-title {
+header {
   text-align: center;
   font-family: DMSerifDisplay;
-  color: red;
-  -webkit-text-stroke: 1.7px black;
+  color: var(--the-red);
+  -webkit-text-stroke: 1.7px var(--the-black);
   font-size: 70px;
 }
 
 .card {
-  max-width: 300px;
+  aspect-ratio: 1/1;
 }
 
 .fill {
@@ -43,12 +50,11 @@
   align-items: center;
   overflow: hidden;
 }
+
 .fill img {
   flex-shrink: 0;
-  min-width: 200px;
-  min-height: 300px;
 }
 
-h2 {
-  margin-left: 20px;
+.center {
+  justify-content: center;
 }
